<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FriendFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friendsPageTitle"
                    android:textAppearance="?attr/textAppearanceDisplaySmall"
                    android:textStyle="bold"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="40dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    android:id="@+id/friendRequestHolder">

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_marginVertical="20dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    android:id="@+id/friendHolder">

                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_friend_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="132dp"
                android:contentDescription="@string/add_friend"
                app:srcCompat="@drawable/baseline_add_24"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <FrameLayout
            android:id="@+id/friend_settings_bottomsheet"
            style="@style/Widget.Material3.BottomSheet"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingVertical="20dp"
            android:paddingHorizontal="40dp"
            app:backgroundTint="?attr/colorSurfaceContainerHigh"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/drag_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bsTitle"
                    android:text=""
                    android:textAppearance="?attr/textAppearanceHeadline4"
                    android:layout_marginTop="30dp"/>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:checked="true"
                    android:id="@+id/friendSharingToggle"
                    android:text="@string/friendToggleAccessLabel"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/friendSharingDescription"
                    android:text=""
                    android:layout_marginBottom="20dp"
                    android:textAppearance="?attr/textAppearanceBodyMedium"/>

                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/deleteFriendButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/removeFriend"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="120dp"
                    />
            </LinearLayout>



        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>